src/objects/Charket__Log__c.object
<CustomObject>
    <description>This object is used only Charket to capture any exceptions hit while running Apex classes through triggers, batch jobs, scheduled jobs, or asynchronous jobs.</description>
    <fields>
        <fullName>Charket__ApexCodeName__c</fullName>
        <label>Apex Code Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Data__c</fullName>
        <label>Data</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__Message__c</fullName>
        <label>Message</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Charket Log</label>
    <listViews>
        <fullName>Charket__All</fullName>
        <columns>NAME</columns>
        <columns>Charket__ApexCodeName__c</columns>
        <columns>Charket__Message__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Log - {0000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Charket Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>